# Vision-2024

./: CMakeLists.txt  Doxyfile  config.toml  license.txt  main.cpp
assets/models/armor.mlmodelc/: metadata.json  model.espresso.net  model.espresso.shape
assets/models/rune.mlmodelc/: metadata.json  model.espresso.net  model.espresso.shape
assets/models/small_ball.mlmodelc/: metadata.json  model.espresso.net  model.espresso.shape
log/: vision-2024.ERROR  vision-2024.INFO  vision-2024.WARNING  vision-2024.hqm-HP-ZBook-Ubuntu-24-04.zichun.log.ERROR.20240915-213322.51088  vision-2024.hqm-HP-ZBook-Ubuntu-24-04.zichun.log.ERROR.20240915-213543.51767  vision-2024.hqm-HP-ZBook-Ubuntu-24-04.zichun.log.ERROR.20240915-214209.53067  vision-2024.hqm-HP-ZBook-Ubuntu-24-04.zichun.log.ERROR.20240915-220210.55244  vision-2024.hqm-HP-ZBook-Ubuntu-24-04.zichun.log.ERROR.20240915-220329.56011  vision-2024.hqm-HP-ZBook-Ubuntu-24-04.zichun.log.ERROR.20240915-220507.56402  vision-2024.hqm-HP-ZBook-Ubuntu-24-04.zichun.log.ERROR.20240915-221658.58185  vision-2024.hqm-HP-ZBook-Ubuntu-24-04.zichun.log.ERROR.20240915-222012.58954  vision-2024.hqm-HP-ZBook-Ubuntu-24-04.zichun.log.ERROR.20240915-225559.10628  vision-2024.hqm-HP-ZBook-Ubuntu-24-04.zichun.log.ERROR.20240916-000512.25289  vision-2024.hqm-HP-ZBook-Ubuntu-24-04.zichun.log.INFO.20240915-213320.51088  vision-2024.hqm-HP-ZBook-Ubuntu-24-04.zichun.log.INFO.20240915-213541.51767  vision-2024.hqm-HP-ZBook-Ubuntu-24-04.zichun.log.INFO.20240915-214207.53067  vision-2024.hqm-HP-ZBook-Ubuntu-24-04.zichun.log.INFO.20240915-220208.55244  vision-2024.hqm-HP-ZBook-Ubuntu-24-04.zichun.log.INFO.20240915-220327.56011  vision-2024.hqm-HP-ZBook-Ubuntu-24-04.zichun.log.INFO.20240915-220504.56402  vision-2024.hqm-HP-ZBook-Ubuntu-24-04.zichun.log.INFO.20240915-221656.58185  vision-2024.hqm-HP-ZBook-Ubuntu-24-04.zichun.log.INFO.20240915-222009.58954  vision-2024.hqm-HP-ZBook-Ubuntu-24-04.zichun.log.INFO.20240915-225555.10628  vision-2024.hqm-HP-ZBook-Ubuntu-24-04.zichun.log.INFO.20240916-000510.25289  vision-2024.hqm-HP-ZBook-Ubuntu-24-04.zichun.log.INFO.20240916-001033.26134  vision-2024.hqm-HP-ZBook-Ubuntu-24-04.zichun.log.WARNING.20240915-213320.51088  vision-2024.hqm-HP-ZBook-Ubuntu-24-04.zichun.log.WARNING.20240915-213541.51767  vision-2024.hqm-HP-ZBook-Ubuntu-24-04.zichun.log.WARNING.20240915-214207.53067  vision-2024.hqm-HP-ZBook-Ubuntu-24-04.zichun.log.WARNING.20240915-220208.55244  vision-2024.hqm-HP-ZBook-Ubuntu-24-04.zichun.log.WARNING.20240915-220327.56011  vision-2024.hqm-HP-ZBook-Ubuntu-24-04.zichun.log.WARNING.20240915-220504.56402  vision-2024.hqm-HP-ZBook-Ubuntu-24-04.zichun.log.WARNING.20240915-221656.58185  vision-2024.hqm-HP-ZBook-Ubuntu-24-04.zichun.log.WARNING.20240915-222009.58954  vision-2024.hqm-HP-ZBook-Ubuntu-24-04.zichun.log.WARNING.20240915-225555.10628  vision-2024.hqm-HP-ZBook-Ubuntu-24-04.zichun.log.WARNING.20240916-000510.25289  vision-2024.hqm-HP-ZBook-Ubuntu-24-04.zichun.log.WARNING.20240916-001033.26134  vision-2024.lhy-ubuntu.lhy.log.INFO.20240908-193053.11294  vision-2024.lhy-ubuntu.lhy.log.INFO.20240908-193117.11429  vision-2024.lhy-ubuntu.lhy.log.WARNING.20240908-193053.11294  vision-2024.lhy-ubuntu.lhy.log.WARNING.20240908-193117.11429
modules/autoaim/: CMakeLists.txt
modules/autoaim/include/srm/: autoaim.hpp
modules/autoaim/include/srm/autoaim/: autoaim-armor.h  autoaim-base.h  detector-armor.h  drawer.h  info.hpp
modules/autoaim/src/: autoaim-armor.cpp  autoaim-base.cpp  detector-armor.cpp  drawer.cpp
modules/common/: CMakeLists.txt
modules/common/include/srm/: common.hpp
modules/common/include/srm/common/: buffer.hpp  config.hpp  factory.hpp
modules/coord/include/srm/: coord.hpp
modules/coord/include/srm/coord/: coord-base.h  coord-solver.h
modules/core/: CMakeLists.txt
modules/core/include/srm/core/: core-base.h  fps-controller.h
modules/core/src/: core-base.cpp  core-mono.cpp  fps-controller.cpp
modules/message/include/srm/: message.hpp
modules/message/include/srm/message/: info.hpp  packet.hpp  (+1 more)
modules/video/include/srm/: video.hpp
modules/viewer/: video.py
modules/viewer/include/srm/: viewer.hpp
modules/viewer/static/: data.js  editor.js  slider.js  style.css
modules/viewer/templates/: video.html
(+6 files in other folders)
